<resources>
    <string name="app_name">HealthPal</string>
    <string name="title_home">Chat</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="auth_failed">authentication failed</string>
    <string name="login_activity_title">Login</string>
    <string name="signup_activity_title">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_password">Please enter a password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--IBM Watson-->
    <string name="username">7f2338e7-eabb-4d6a-8261-d646a1bc1a57</string>
    <string name="password">te0ySFaqzoaF</string>
    <string name="workspace">6b39d743-cca9-40b9-bb25-f0dddc4f47dd</string>
    <string name="intro">Hello! I am your personal health assistant! Hope you are feeling good, how can I help you today?</string>

    <string name="baseURL">https://sandbox-healthservice.priaid.ch/</string>
    <string name="token">token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6Im1pa2UueHVuZGFAZ21haWwuY29tIiwicm9sZSI6IlVzZXIiLCJodHRwOi8vc2NoZW1hcy54bWxzb2FwLm9yZy93cy8yMDA1LzA1L2lkZW50aXR5L2NsYWltcy9zaWQiOiIzMTU2IiwiaHR0cDovL3NjaGVtYXMubWljcm9zb2Z0LmNvbS93cy8yMDA4LzA2L2lkZW50aXR5L2NsYWltcy92ZXJzaW9uIjoiMjAwIiwiaHR0cDovL2V4YW1wbGUub3JnL2NsYWltcy9saW1pdCI6Ijk5OTk5OTk5OSIsImh0dHA6Ly9leGFtcGxlLm9yZy9jbGFpbXMvbWVtYmVyc2hpcCI6IlByZW1pdW0iLCJodHRwOi8vZXhhbXBsZS5vcmcvY2xhaW1zL2xhbmd1YWdlIjoiZW4tZ2IiLCJodHRwOi8vc2NoZW1hcy5taWNyb3NvZnQuY29tL3dzLzIwMDgvMDYvaWRlbnRpdHkvY2xhaW1zL2V4cGlyYXRpb24iOiIyMDk5LTEyLTMxIiwiaHR0cDovL2V4YW1wbGUub3JnL2NsYWltcy9tZW1iZXJzaGlwc3RhcnQiOiIyMDE4LTA0LTA2IiwiaXNzIjoiaHR0cHM6Ly9zYW5kYm94LWF1dGhzZXJ2aWNlLnByaWFpZC5jaCIsImF1ZCI6Imh0dHBzOi8vaGVhbHRoc2VydmljZS5wcmlhaWQuY2giLCJleHAiOjE1MjMxMTM4MjcsIm5iZiI6MTUyMzEwNjYyN30.bVQshAFWWjm-y-aOIAOdJyEGxhMaEo0fzCkznjHPxNE</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!--<String name="symptoms">symptoms?</String>-->
    <!--<String name="issues">issues?</String>-->
    <!--<String name="issuesInfo">issues/</String>-->
    <!--<String name="issuesInfo2">/info</String>-->
    <!--<string name="diagnosis">diagnosis?symptoms=[\"13\"]&amp;gender=male&amp;year_of_birth=1988</string>-->
    <!--<string name="bodyLocation">body/locations?</string>-->
    <!--<string name="subBodyLocation">body/locations//?????</string>-->
    <!--<string name="symptomsBody">symptoms/0/man?</string>-->

    <!--<string name="languageformat">&language=en-gb&format=json</string>-->

    <string name="search1">pharmacy</string>
    <string name="search2">clinic</string>
    <string name="search3">hospital</string>
    <string name="search4">insurance</string>
</resources>
