<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mikexd.healthpal.Fragment.MapFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.mikexd.healthpal.Activity.MapsActivity">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/search1" />

            <Button
                android:id="@+id/btn2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/search2" />

            <Button
                android:id="@+id/btn3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/search3" />

            <Button
                android:id="@+id/btn4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/search4" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>